# machine-learning-playground

./: .gitignore  Cargo.toml  README.md  pytorch_setup_guide.md
1_classification/src/: main.rs
2_diffusion/: Cargo.toml
2_diffusion/src/: data.rs  inference.rs  main.rs  scheduler.rs  training.rs
2_diffusion/src/model/: blocks.rs  embeddings.rs  mod.rs
3_image_captioning/: Cargo.toml
3_image_captioning/src/: main.rs  ollama.rs
4_chat/: Cargo.toml
4_chat/src/: main.rs  ollama.rs
artifacts/checkpoint/: model-10.mpk  model-9.mpk  optim-10.mpk  optim-9.mpk
src/: data.rs  inference.rs  model.rs  training.rs
