[package]
name = "image_captioning"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
burn = { version = "0.16", features = ["ndarray", "vision", "dataset"] }
